Fixed Overflow Problem
Allowed div to account for small screens and texts overflowing from that

--- a/frontend/templates/main.css
+++ b/frontend/templates/main.css
@@ -30,7 +30,9 @@
 }
 
 .about{
-	font-size: 100%;
+	overflow: auto;
+	font-family: Times new roman;
+	font-size: 16px; 
 	padding: 2% 2% 1% 2% ;
 	background-image:url("./pics/paper.jpg") ;
 	width: 50%;
